site-deployment/ingress-nginx.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mysite
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: site-service
                port:
                  number: 8080
